[tool.poetry]
name = "fb-logging"
homepage = "https://github.com/fbrehm/fb-logging"
version = "1.2.1"
description = "Python modules to extend the logging mechanism in Python."
authors = ["Frank Brehm <frank@brehm-online.com>"]
license = "LGPL3+"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "fb_logging", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
poethepoet = "^0.36.0"
six = '^1.16.0'

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
pylint = "^3.3.7"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^2.5.0"
flake8-bugbear = "^24.12.12"
flake8-class-newline = "^1.6.0"
flake8-comprehensions = "^3.16.0"
flake8-deprecated = "^2.2.1"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
flake8-quotes = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

# [tool.poetry.requires-plugins]
# poethepoet = { version = "~0.36.0", extras = ["poetry_plugin"]}

[tool.poetry.scripts]
dch2speclog = 'fb_logging.dch2speclog:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311", "py312"]

